# API

./: .clang-format  .gitignore  BUCK  CHANGES.md  CMakeLists.txt  LICENSE.md  README.md  doxyfile  library.bzl  spaces_deps.toml
.github/workflows/: cmake.yml
doc/: API.tag
doc/xml/: Doxyfile.xml  _a_p_i_2include_2api_2macros_8hpp.xml  _aio_8hpp.xml  _array_8hpp.xml  _base64_8hpp.xml  _case_8hpp.xml  _cli_8hpp.xml  _clock_time_8hpp.xml  _clock_timer_8hpp.xml  _cond_8hpp.xml  _container_object_8hpp.xml  _data_8hpp.xml  _data_file_8hpp.xml  _date_time_8hpp.xml  _deque_8hpp.xml  _dir_8hpp.xml  _engine_8hpp.xml  _file_8hpp.xml  _file_info_8hpp.xml  _file_system_8hpp.xml  _flags_8hpp.xml  _fs_a_p_i_2include_2fs_2macros_8hpp.xml  _function_8hpp.xml  _json_printer_8hpp.xml  _lambda_file_8hpp.xml  _list_8hpp.xml  _markdown_printer_8hpp.xml  _matrix_8hpp.xml  _micro_time_8hpp.xml  _mq_8hpp.xml  _mutex_8hpp.xml  _path_8hpp.xml  _pipe_8hpp.xml  _printer_8hpp.xml  _process_8hpp.xml  _queue_8hpp.xml  _ring_8hpp.xml  _sched_8hpp.xml  _sem_8hpp.xml  _signal_8hpp.xml  (+210 more)
include/sdk/: api.h  types.h
libraries/: API.cmake
libraries/API/: BUCK  CMakeLists.txt  README.md  StratifyAPI.cmake  api.cmake
libraries/API/include/: CMakeLists.txt
libraries/API/include/api/: api.h  api.hpp  macros.hpp
libraries/API/src/: CMakeLists.txt  api.cpp
libraries/ChronoAPI/: BUCK  CMakeLists.txt  README.md  doxyfile
libraries/ChronoAPI/include/: CMakeLists.txt  chrono.hpp
libraries/ChronoAPI/include/chrono/: ClockTime.hpp  ClockTimer.hpp  DateTime.hpp  MicroTime.hpp
libraries/ChronoAPI/src/: CMakeLists.txt  ClockTime.cpp  ClockTimer.cpp  DateTime.cpp  MicroTime.cpp
libraries/FsAPI/: BUCK  CMakeLists.txt  README.md  doxyfile
libraries/FsAPI/include/: CMakeLists.txt  fs.hpp
libraries/FsAPI/include/fs/: Aio.hpp  AssetFileSystem.hpp  DataFile.hpp  Dir.hpp  File.hpp  FileInfo.hpp  FileObject.hpp  FileSystem.hpp  LambdaFile.hpp  Path.hpp  ViewFile.hpp  dirent_windows.h  macros.hpp
libraries/FsAPI/src/: AssetFileSystem.cpp  CMakeLists.txt  DataFile.cpp  Dir.cpp  File.cpp  FileInfo.cpp  FileObject.cpp  FilePipe.cpp  FileSystem.cpp  LambdaFile.cpp  Path.cpp  ViewFile.cpp  local.h
libraries/HalAPI/: CMakeLists.txt
libraries/HalAPI/include/: CMakeLists.txt  hal.hpp
libraries/HalAPI/include/hal/: Adc.hpp  CFifo.hpp  Core.hpp  Dac.hpp  Dev.hpp  Device.hpp  DeviceSignal.hpp  Display.hpp  DisplayDevice.hpp  Drive.hpp  Eint.hpp  Emc.hpp  FFifo.hpp  Fifo.hpp  Gpio.hpp  I2C.hpp  I2S.hpp  JsonAttributes.hpp  Led.hpp  Periph.hpp  Pin.hpp  PinAssignment.hpp  Pwm.hpp  QSPI.hpp  Rtc.hpp  Spi.hpp  StreamFFifo.hpp  Switchboard.hpp  Tmr.hpp  Uart.hpp  Usb.hpp
libraries/HalAPI/src/: Adc.cpp  CFifo.cpp  CMakeLists.txt  Core.cpp  Dac.cpp  Dev.cpp  Device.cpp  Display.cpp  DisplayDevice.cpp  Drive.cpp  Eint.cpp  Emc.cpp  FFifo.cpp  Fifo.cpp  Gpio.cpp  I2C.cpp  I2S.cpp  Led.cpp  Periph.cpp  Pwm.cpp  QSPI.cpp  Rtc.cpp  Spi.cpp  StreamFFifo.cpp  Switchboard.cpp  Tmr.cpp  Uart.cpp  Usb.cpp  util.h  util_c.c
libraries/LinkAPI/: CMakeLists.txt
libraries/LinkAPI/include/: CMakeLists.txt  link.hpp
libraries/LinkAPI/include/link/: Link.hpp
libraries/LinkAPI/src/: CMakeLists.txt  Link.cpp
libraries/PrinterAPI/: BUCK  CMakeLists.txt  README.md  doxyfile
libraries/PrinterAPI/include/: CMakeLists.txt  printer.hpp
libraries/PrinterAPI/include/printer/: JsonPrinter.hpp  MarkdownPrinter.hpp  Printer.hpp  YamlPrinter.hpp
libraries/PrinterAPI/src/: CMakeLists.txt  JsonPrinter.cpp  MarkdownPrinter.cpp  Printer.cpp  YamlPrinter.cpp
libraries/SysAPI/: BUCK  CMakeLists.txt  README.md  doxyfile
libraries/SysAPI/include/: CMakeLists.txt  sys.hpp
libraries/SysAPI/include/sys/: Cli.hpp  Pipe.hpp  Process.hpp  System.hpp  TemporaryDirectory.hpp  Version.hpp
libraries/SysAPI/src/: CMakeLists.txt  Cli.cpp  Pipe.cpp  Process.cpp  System.cpp  TemporaryDirectory.cpp  Version.cpp
libraries/TestAPI/: BUCK  CMakeLists.txt  README.md  doxyfile
libraries/TestAPI/include/: CMakeLists.txt  test.hpp
libraries/TestAPI/include/test/: Case.hpp  Engine.hpp  Function.hpp  Test.hpp
libraries/TestAPI/src/: CMakeLists.txt  Case.cpp  Engine.cpp  Test.cpp
libraries/ThreadAPI/: BUCK  CMakeLists.txt  README.md  doxyfile
libraries/ThreadAPI/include/: CMakeLists.txt  thread.hpp
libraries/ThreadAPI/include/thread/: Cond.hpp  Mq.hpp  Mutex.hpp  Sched.hpp  Sem.hpp  Signal.hpp  Thread.hpp  Timer.hpp
libraries/ThreadAPI/src/: CMakeLists.txt  Cond.cpp  Mq.cpp  Mutex.cpp  Sched.cpp  Sem.cpp  Signal.cpp  Thread.cpp  Timer.cpp
libraries/VarAPI/: BUCK  CMakeLists.txt  README.md  doxyfile
libraries/VarAPI/include/: CMakeLists.txt  var.hpp
libraries/VarAPI/include/var/: Array.hpp  Base64.hpp  ContainerObject.hpp  Data.hpp  Deque.hpp  Flags.hpp  List.hpp  MagicEnum.hpp  Matrix.hpp  Queue.hpp  Ring.hpp  Set.hpp  Stack.hpp  StackString.hpp  String.hpp  StringUtil.hpp  StringView.hpp  Tokenizer.hpp  Vector.hpp  View.hpp
libraries/VarAPI/src/: Array.cpp  Base64.cpp  CMakeLists.txt  Data.cpp  Flags.cpp  List.cpp  Matrix.cpp  Queue.cpp  Ring.cpp  StackString.cpp  String.cpp  StringView.cpp  Token.cpp  Tokenizer.cpp  Vector.cpp  View.cpp
tests/: CMakeLists.txt  sl_workspace_settings.json
tests/API/: CMakeLists.txt  api.cmake  sl_settings.json
tests/API/src/: UnitTest.hpp
tests/ChronoAPI/: CMakeLists.txt  sl_settings.json
tests/ChronoAPI/src/: UnitTest.hpp
tests/FsAPI/: CMakeLists.txt  sl_settings.json
tests/FsAPI/src/: UnitTest.hpp
tests/ThreadAPI/: CMakeLists.txt  sl_settings.json
tests/ThreadAPI/src/: UnitTest.hpp
tests/VarAPI/: CMakeLists.txt  sl_settings.json
tests/VarAPI/src/: UnitTest.hpp  sl_config.h
tests/common/: main.cpp
